Added nationalizations synchronizer

--- a/nationalization/internal/languages/en.json
+++ b/nationalization/internal/languages/en.json
@@ -35,6 +35,10 @@
           "Title": "Category:Recreation"
         },
         {
+          "ID": 1077074,
+          "Title": "Category:Foods"
+        },
+        {
           "ID": 4610114,
           "Title": "Category:Films"
         },
@@ -4322,6 +4326,10 @@
         }
       ],
       "Articles": [
+        {
+          "ID": 20857,
+          "Title": "Masonry"
+        },
         {
           "ID": 24573,
           "Title": "Pepsi"
