--- a/nationalization/internal/languages/it.json
+++ b/nationalization/internal/languages/it.json
@@ -3,8 +3,7 @@
   "Topics": [
     {
       "ID": 2147483637,
-      "Title": "Cultura ed arte",
-      "Abstract": "La parola cultura deriva dalla radice latina cultura o cultus che significa \"abitare, coltivare o onorare\".In generale, la cultura si riferisce all'attività umana; diverse definizioni della cultura riflettono diverse teorie per la comprensione o criteri per valutare l'attività umana.Attualmente gli antropologi usano questo termine per riferirsi alla capacità umana universale di classificare le esperienze e di codificarle e comunicarle simbolicamente.Essi considerano questa capacità come una caratteristica che definisce il genere Homo.Dato che la cultura è appresa, le persone che vivono in luoghi diversi hanno culture diverse.Le arti sono una vasta suddivisione della cultura, composta da molti lavori e discipline creative.È un termine più ampio di \"arte \", così come descrizione di un campo che solitamente significa solo le arti visive.Le arti comprendono le arti visive, le arti letterarie e le arti dello spettacolo - musica, teatro, ballo, recitazione e film, tra gli altri.L'arte, nel suo senso più ampio, è l'espressione della creatività o dell'immaginazione.La parola arte deriva dalla parola latina ars, che, tradotta in modo letterale, significa \"arrangiamento\".L'arte è comunemente intesa come l'atto di fare opere (o opere d'arte) che usano l'impulso creativo umano e che hanno un significato oltre la semplice descrizione. L'arte è spesso distinta dalle attività artigianali e ricreative.Il termine arti creative indica una raccolta di discipline il cui scopo principale è la produzione di materiale per lo spettatore o il pubblico da interpretare.Come tale, l'arte può essere considerata sotto varie forme come la scrittura di prosa, la poesia, la danza, l'attore o il dramma, film, musica, scultura, fotografia, illustrazione, architettura, collage, pittura, artigianato e moda.L'arte può anche essere intesa come legata alla creatività, alla cultura e alla generazione dell'emozione.",
+      "Title": "Culture and the arts",
       "Categories": [
         {
           "ID": 24741,
@@ -45,10 +44,6 @@
         {
           "ID": 2047954,
           "Title": "Categoria:Cultura"
-        },
-        {
-          "ID": 5299452,
-          "Title": "Categoria:Attività ricreative e sportive"
         }
       ],
       "Articles": [
@@ -277,6 +272,10 @@
           "Title": "Pandolce"
         },
         {
+          "ID": 2416134,
+          "Title": "Realismo (arte)"
+        },
+        {
           "ID": 2422577,
           "Title": "Realismo (letteratura)"
         },
@@ -456,8 +455,7 @@
     },
     {
       "ID": 2147483638,
-      "Title": "Geografia e luoghi",
-      "Abstract": "La geografia (geo dal greco (γη) o Gaea (γαία), che significa \"terra\" e graphein (γράφειν) che significa \"descrivere\" o \"scrivere\") è lo studio della terra e delle sue caratteristiche, abitanti e fenomeni. Una traduzione letterale sarebbe \"descrivere o scrivere sulla Terra\". La prima persona ad usare la parola \"geografia\" era Eratostene (275-195 a.C.). Quattro recerche vemgono fatte nella storia geografica sono l'analisi spaziale dei fenomeni naturali e umani (geografia come studio della distribuzione), studi di zona (luoghi e regioni), studio dei rapporti uomo-terra e ricerca nelle scienze della terra. Tuttavia, la geografia moderna è una disciplina che racchiude tutto ciò che cerca soprattutto di comprendere il mondo e tutte le sue complessità umane e naturali - non solo dove sono gli oggetti, ma anche come sono cambiati e diventano. Come \"il ponte tra le scienze umane e fisiche\", la geografia è divisa in due settori principali: la geografia umana e la geografia fisica.",
+      "Title": "Geography and places",
       "Categories": [
         {
           "ID": 24992,
@@ -474,14 +472,6 @@
         {
           "ID": 785776,
           "Title": "Categoria:Geomorfologia"
-        },
-        {
-          "ID": 1922055,
-          "Title": "Categoria:Monetazione per nazionalità"
-        },
-        {
-          "ID": 6390441,
-          "Title": "Categoria:Categorie per stato"
         }
       ],
       "Articles": [
@@ -521,8 +511,7 @@
     },
     {
       "ID": 2147483639,
-      "Title": "Salute e benessere",
-      "Abstract": " La salute è il livello di efficienza funzionale o metabolica di un organismo vivente.  Nell'uomo è la capacità degli individui o delle comunità di adattarsi e di gestire autonomamente quando affrontano sfide fisiche, mentali o sociali. La definizione più ampiamente accettata di buona salute è quella della Costituzione della Sanità Mondiale.  Essa afferma: \"la salute è uno stato di completo benessere fisico, mentale e sociale e non è solo l'assenza di malattie o di infermità\" (World Health Organization, 1946).  Negli ultimi anni questa affermazione è stata amplificata per includere la capacità di condurre una \"vita socialmente ed economicamente produttiva\".  La definizione dell'OMS non è senza critiche, soprattutto perché è troppo ampia.  Gli aspetti più solidi del benessere che si adattano saldamente nel campo della medicina sono la salute ambientale, la nutrizione, la prevenzione delle malattie e la salute pubblica. Queste questioni possono essere studiate a lungo e possono aiutare a misurare il benessere. ",
+      "Title": "Health and fitness",
       "Categories": [
         {
           "ID": 27684,
@@ -551,10 +540,6 @@
         {
           "ID": 2605417,
           "Title": "Categoria:Scienze della salute"
-        },
-        {
-          "ID": 5300176,
-          "Title": "Categoria:Attività relative alla cura delle persone"
         }
       ],
       "Articles": [
@@ -566,8 +551,7 @@
     },
     {
       "ID": 2147483640,
-      "Title": "Storia ed eventi",
-      "Abstract": "La storia è l'interpretazione degli eventi passati, delle società e delle civiltà. Il termine storia viene dalla storia greca (ἱστορία), \"un resoconto delle proprie indagini\", e condivide quella etimologia con la narrazione della parola inglese come narrazione. La Enciclopedia Britannica del 1911 ha affermato che \"la storia nel senso più ampio è tutto ciò che è accaduto, non solo tutti i fenomeni della vita umana, ma anche quelli del mondo naturale. È tutto ciò che subisce il cambiamento; E come la scienza moderna ha dimostrato che non c'è nulla assolutamente statico, quindi l'intero universo, e ogni sua parte, ha la sua storia.\"",
+      "Title": "History and events",
       "Categories": [
         {
           "ID": 24848,
@@ -631,8 +615,7 @@
     },
     {
       "ID": 2147483641,
-      "Title": "Matematica e logica",
-      "Abstract": "La matematica è la scienza della quantizzazione. È anche lo studio di modelli e relazioni, compresi concetti quali la quantità, la struttura, lo spazio, l'incertezza e il cambiamento. Si è evoluto attraverso l'uso di astrazione e ragionamento logico, dal conteggio, dal calcolo, dalla misurazione e dal metodo sistematico di posizioni, forme e movimenti di oggetti fisici. I matematici esplorano tali concetti, mirando a formulare nuove congetture e stabilire la loro verità con rigorose deduzioni da assiomi e definizioni scelti in modo appropriato. La logica (dai loghi classici greci λόγος, che significa parola, pensiero, idea, argomento, conto, ragione o principio) è lo studio dei principi e dei criteri di inferenza e dimostrazione validi. Come scienza formale, la logica indaga e classifica la struttura delle affermazioni e degli argomenti, sia attraverso lo studio di sistemi formali di inferenza sia attraverso lo studio di argomenti in linguaggio naturale. Il campo della logica varia da temi fondamentali come lo studio delgli errori e dei paradossi, all'analisi specialistica del ragionamento utilizzando la probabilità e agli argomenti che implicano la causalità.La logica è comunemente usata anche oggi nella teoria dell'argomentazione. Dalla metà dell'Ottocento la logica formale è stata studiata nel contesto delle fondamenta della matematica.",
+      "Title": "Mathematics and logic",
       "Categories": [
         {
           "ID": 24852,
@@ -664,8 +647,7 @@
     },
     {
       "ID": 2147483642,
-      "Title": "Scienze naturali e fisiche",
-      "Abstract": "Il termine natura deriva dalla parola latina natura, o \"qualità essenziali, disposizione innata\". Natura è una traduzione latina della parola greca physis (φύσις), che originariamente si riferisce alle caratteristiche intrinseche che piante, animali e altre caratteristiche del mondo si sviluppano di propria volontà. Il concetto di natura nel suo complesso, tutta la materia e l'energia dell'universo, è una delle diverse espansioni della nozione originale. La scienza fisica è un termine usato per i rami della scienza naturale e della scienza, che studiano sistemi non viventi, in contrasto con le scienze biologiche. Tuttavia, il termine \"fisico\" crea una distinzione involontaria, in qualche modo arbitraria, in quanto molti rami della scienza fisica studiano anche i fenomeni biologici.",
+      "Title": "Nature and physical sciences",
       "Categories": [
         {
           "ID": 24566,
@@ -686,10 +668,6 @@
         {
           "ID": 52701,
           "Title": "Categoria:Catastrofi"
-        },
-        {
-          "ID": 269321,
-          "Title": "Categoria:Scienze dello spazio"
         },
         {
           "ID": 1106438,
@@ -865,8 +843,7 @@
     },
     {
       "ID": 2147483643,
-      "Title": "Persone e se stessi",
-      "Abstract": "Una collezione di persone si riferisce spesso a un gruppo generale, come tutti gli esseri umani, un gruppo etnico o una nazione. Una persona individuale è sé stesso, dalla sua prospettiva. Per te, \"se stesso\" sei tu. A qualcun altro, \"io \" è quella persona. Una biografia è un genere di letteratura o di un film, che presenta una relazione relativamente completa degli eventi più interessanti e importanti della vita di una persona importante. La vita o la vita personale o l'esistenza umana è un'esperienza personale e privata di vita dell'uomo individuale (compresa la carriera lavorativa, la vita familiare e altri elementi). Nei tempi preistorici la vita e l'esistenza erano basati sulla sopravvivenza. C'era poca privacy e una persona è stata identificata dal loro ruolo nel gruppo. Nei tempi moderni, molte persone hanno persino pensato alle loro vite personali come se fossero separate dal loro lavoro. Questa segmentazione di \"aree di vita \" è evidente in frasi come \"vita lavorativa\", \"vita familiare\" e \"vita sessuale\". Il significato o il ruolo della \"vita\" di una persona, \"Esistenza umana \" è discussa in molte religioni e filosofie. Nei paesi industrializzati occidentali, esistono diverse industrie di servizi che aiutano la gente a migliorare la propria vita personale, come ad esempio consulenza e società di coaching di vita.",
+      "Title": "People and self",
       "Categories": [
         {
           "ID": 27066,
@@ -883,10 +860,6 @@
         {
           "ID": 3097777,
           "Title": "Categoria:Artisti per disciplina"
-        },
-        {
-          "ID": 5286346,
-          "Title": "Categoria:Donne"
         }
       ],
       "Articles": [
@@ -1094,8 +1067,7 @@
     },
     {
       "ID": 2147483644,
-      "Title": "Filosofia e pensiero",
-      "Abstract": "La filosofia ha tante definizioni come ci sono stati i filosofi, sia come argomento che come attività, e nessuna definizione semplice può fare giustizia. Il problema della definizione della filosofia è dunque un argomento controverso che oggi è affrontato dalla metafilosofia (o dalla filosofia della filosofia). La parola deriva dalle antiche parole greche, philo-, da amare o da amicizia, e -sophia, dalla saggezza. L'uso moderno del termine è molto più ampio; Il concetto di filosofia comprende tutte le conoscenze e tutto ciò che può essere conosciuto, compresi i mezzi attraverso i quali tali conoscenze possono essere acquisite. Tuttavia, nel mondo accademico contemporaneo della lingua inglese, il termine viene spesso utilizzato implicitamente per riferirsi alla filosofia analitica e, in paesi non inglesi, di deformazione europea, spesso si riferisce implicitamente ad un diverso tipo la filosofia continentale. Gli antichi greci hanno organizzato il tema in cinque categorie fondamentali: metafisica, epistemologia, etica, politica e estetica. Questa organizzazione del soggetto è ancora largamente usata nella filosofia occidentale di oggi. L'intenzione o il pensiero è un processo mentale che permette agli esseri di modellare il mondo, e quindi affrontarla in modo efficace secondo i loro obiettivi, piani, finali e desideri. Parole che si riferiscono a concetti e processi simili nella lingua inglese comprendono la cognizione, la sensazione, la coscienza, l'idea e l'immaginazione. Il pensiero coinvolge la manipolazione cerebrale delle informazioni, come quando formiamo concetti, impegniamo nella risoluzione dei problemi, nella ragione e nelle decisioni. Pensare è una funzione cognitiva più alta e l'analisi dei processi di pensiero fa parte della psicologia cognitiva.",
+      "Title": "Philosophy and thinking",
       "Categories": [
         {
           "ID": 24638,
@@ -1151,8 +1123,7 @@
     },
     {
       "ID": 2147483645,
-      "Title": "Religioni e credenze",
-      "Abstract": "La religione è l'adesione a credenze e rituali codificati che generalmente implicano una fede in una natura spirituale e uno studio delle tradizioni ancestrali ereditarie, della conoscenza e della saggezza legate alla comprensione della vita umana. Il termine \"religione\" si riferisce sia alle pratiche personali legate alla fede che ai più grandi sistemi condivisi di credenza. Un sistema di credenze può fare riferimento a una religione o una visione del mondo. Una visione del mondo (o una visione del mondo) è un termine calzato dalla parola tedesca Weltanschauung, Welt è la parola tedesca per \"mondo\", e Anschauung è la parola tedesca per \"vista\" o \"prospettiva\". È un concetto fondamentale per la filosofia e l'epistemologia tedesca e si riferisce ad un'ampia percezione del mondo. Inoltre, si riferisce al quadro di idee e credenze attraverso le quali un individuo interpreta il mondo e interagisce in esso.",
+      "Title": "Religion and belief systems",
       "Categories": [
         {
           "ID": 33147,
@@ -1183,16 +1154,8 @@
           "Title": "Categoria:Antropologia religiosa"
         },
         {
-          "ID": 2817978,
-          "Title": "Categoria:Secolarizzazione"
-        },
-        {
           "ID": 3283925,
           "Title": "Categoria:Controversie religiose"
-        },
-        {
-          "ID": 3474584,
-          "Title": "Categoria:Personalità religiose"
         },
         {
           "ID": 5404155,
@@ -1212,8 +1175,7 @@
     },
     {
       "ID": 2147483646,
-      "Title": "Società e scienze sociali",
-      "Abstract": "Una società è un gruppo di persone che formano un sistema semi-chiuso. Al suo modo più semplice, il termine società si riferisce ad un grande gruppo di persone che condividono la propria cultura e le proprie istituzioni. Una società è una rete di relazioni tra le persone. La parol inglese società è derivata dalla società francese, che ha avuto origine nelle società latine, \"un'associazione amichevole con gli altri\", dal significato socius \"compagno, compagno, compagno o business partner\". Così il significato della società è strettamente connessa a ciò che è considerato essere sociale. Implica nel senso della società è che i suoi membri possano condividere una certa preoccupazione o interesse reciproco, un obiettivo comune o caratteristiche comuni. Le scienze sociali utilizzano generalmente il termine società per significare un gruppo di persone che formano un sistema sociale semi-chiuso, in cui la maggior parte delle interazioni sono con altri individui appartenenti al gruppo. Più astrattamente, una società è definita come una rete di relazioni tra soggetti sociali. Una società è anche a volte definita come una comunità interdipendente, ma il sociologo Tönnies ha cercato di trarre un contrasto tra la società e la comunità. Una caratteristica importante della società è la struttura sociale, di cui alcuni aspetti includono i ruoli e la classifica sociale. La scienza sociale è un gruppo di discipline accademiche che studiano gli aspetti umani del mondo. Diverso dalle arti e dalle scienze umanistiche, in quanto la scienza sociale tende ad enfatizzare l'uso del metodo scientifico nello studio dell'umanità, compresi metodi quantitativi e qualitativi.",
+      "Title": "Society and social sciences",
       "Categories": [
         {
           "ID": 43272,
@@ -1234,10 +1196,6 @@
         {
           "ID": 1588868,
           "Title": "Categoria:Diritti"
-        },
-        {
-          "ID": 2730680,
-          "Title": "Categoria:Temi tipici della fantascienza"
         }
       ],
       "Articles": [
@@ -1853,8 +1811,7 @@
     },
     {
       "ID": 2147483647,
-      "Title": "Tecnologie e scienze applicate",
-      "Abstract": "La tecnologia è un concetto espanso che si occupa di uno speciale uso e di conoscenze di strumenti e di artigianato, e come influisce sulla capacità di una specie di controllare e adattarsi all'ambiente. Nella civiltà umana, è una conseguenza della scienza e dell'ingegneria, anche se molti progressi tecnologici precedono la formalizzazione di queste due discipline. Il termine può essere applicato generalmente o in settori specifici, ad esempio la tecnologia di costruzione, la tecnologia medica o la tecnologia più avanzata. L'uso della tecnologia dell'umanità ha cominciato con la conversione di risorse naturali abbondanti in strumenti semplici. La scoperta preistorica della capacità di controllare il fuoco aumenta le fonti disponibili di cibo e l'invenzione della ruota ha aiutato gli esseri umani a viaggiare e controllare il loro ambiente. I recenti sviluppi tecnologici, tra cui la stampa e Internet, hanno ridotto barriere fisiche alla comunicazione e consentono agli esseri umani di interagire su scala globale. Tuttavia, non tutte le tecnologie sono state utilizzate per scopi pacifici; Lo sviluppo di armi di potenza distruttiva sempre crescente ha progredito per tutta la storia, dai club alle bombe nucleari.   La scienza applicata è l'applicazione della conoscenza di uno o più campi scientifici naturali per risolvere problemi pratici. Ad esempio, i settori dell'ingegneria sono scienze applicate. La scienza applicata è importante per lo sviluppo tecnologico. Il suo uso nelle impostazioni industriali è di solito denominato ricerca e sviluppo.",
+      "Title": "Technology and applied sciences",
       "Categories": [
         {
           "ID": 24695,
